--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3088,3 +3088,206 @@ button.createbtn i {
 
   
 }
+
+.card-block {
+  font-size: 1em;
+  position: relative;
+  margin: 0;
+  padding: 1em;
+  border: none;
+ text-align: center;
+  box-shadow: none;
+   
+}
+.card-block .card-title{
+  font-size: 1em;
+  
+   
+}
+.diagram-section .card {
+  font-size: 1em;
+  overflow: hidden;
+  padding: 20px;
+  border: none;
+  border-radius: .28571429rem;
+box-shadow: 0 5px 9px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+margin-top:20px;
+
+}
+.diagram-section .carousel-inner img {
+
+
+width: 100%;
+margin-left: auto;
+margin-right: auto;
+
+}
+.diagram-section .carousel-inner {
+
+height: 96%;
+width: 100%;
+box-shadow: 0 5px 9px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+margin: auto;
+}
+.team-container {
+	max-width: 1000px;
+	margin: auto;
+	border-top: 1px #e9e9e9 solid;
+	border-bottom: 1px #e9e9e9 solid;
+	padding-top: 5em;
+	padding-bottom: 5em;
+	margin-top: 3em;
+	position: relative;
+  }
+  
+  .team-member {
+
+	float: left;
+	text-align: center;
+	position: relative;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff;
+	transition: 0.5s;
+	margin-bottom: 10px;
+	
+  }
+  
+  .team-member:last-child {margin-right: 0;}
+  
+  
+  .team-member span,
+  .team-member h3 {
+
+	font-family: sans-serif;
+	letter-spacing: -1px;
+  }
+  
+  .team-member h3 {
+	color: #034F93 ;
+  }
+  
+
+  
+  .team-member span {
+	display: block;
+   
+  }
+  .team-photo {
+
+	text-align: center;
+	margin: auto;
+	max-width: 100%;
+	height: auto;
+	transition: 0.1s transform ease-in-out;
+	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+	margin-bottom: 20px;
+  }
+  
+  
+  .team-photo:hover {
+	transform: scale(1.2);
+	cursor: pointer;
+  }
+  
+  
+  /* code for phone layout */
+  @media (max-width:850px){
+	.team-member {
+	  width:25%;
+	  margin-left: 4%;
+	  margin-right: 4%;
+	  margin-bottom: 40px;
+	  
+	}
+	
+  }
+  .sectionheader h2{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 42px;
+    text-align: center;
+    position: relative;
+    color: #000000;
+  }
+  .sectionheader:after{
+    content: '';
+    position: absolute;
+    border: 1px solid #CFCFCF;
+    top: 70%;
+    right: 0px;
+    width: 100%;
+ 
+  }
+  .sectionheader{
+    position: relative;
+  }
+  /*<!-- ******************
+start book section
+****************** -->*/
+.bookDescriptionContainer .book{
+	background-color: #FFFFFF;
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+	border-radius: 6px;
+}
+.section-book{
+	padding: 80px 0px;
+}
+.bookcontent{
+	height: 550px;
+	top: -25px;
+	border: 1px solid red;
+	background-color: white;
+}
+.book{
+	bottom: 12px;
+}
+.img-thumbnail{
+	border: 1px solid #ffffff !important;
+}
+.bookDescription{
+	background: linear-gradient(119.51deg, #3176B4 0%, #004C91 100%);
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+	border-bottom-right-radius: 6px;
+	border-top-right-radius: 6px;
+	height: 500px;
+	color: #ffffff;
+}
+.bookDescription h2{
+	font-style: normal;
+	font-weight: bold;
+	font-size: 25px;
+	line-height: 32px;
+	padding-top: 30px;
+}
+.bookDescription p,
+.bookDescription h3{
+	font-style: normal;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 23px;
+}
+.bookDescription a{
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 19px;
+	text-decoration-line: underline;
+	color: #ffffff
+
+}
+.bookDescription i{
+	font-size: 20px;
+}
+.bookDescription ul li{
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	margin-left: -20px;
+
+}
+.bookDiagramDesc{
+	margin-top: 20px;
+}
