--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 section {
   padding: 80px 0;
-  overflow: hidden;
+
 }
 
 .section-header {
@@ -3290,4 +3290,101 @@ start book section
 }
 .bookDiagramDesc{
 	margin-top: 20px;
+}
+
+
+/*<!-- ******************
+start banner section
+***************** -->*/
+.banner-section{
+	padding: 0px 10px;
+	background: linear-gradient(289.73deg, #333333 0%, #545454 100%);
+}
+.blackBanner{
+	color: #ffffff;
+	margin-top: 30px;
+}
+.blackBanner .col-xl-7{
+	padding-left: 0px;
+}
+.banner-box-description-row{
+	margin-top: -100px;
+}
+.banner-box-description-row img{
+   
+	width: 100%;
+	height:  80%;
+	margin: auto;
+}
+.blackBanner h4{
+	font-style: normal;
+	font-weight: bold;
+	font-size: 25px;
+	line-height: 42px;
+}
+.banner-box-description{
+	position: relative;
+	top: 135px;
+	background: #FFFFFF;
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+	border-radius: 6px;
+	text-align: center;
+	padding: 20px;
+}
+.banner-box-description h5{
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 60px;
+	color: #034F93;
+
+}
+.banner-box-description p{
+	font-size: 18px;
+	color: #000000;
+}
+.banner-box-description h6{
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 21px;
+	color: #000000;
+}
+.banner-box-description-2{
+	position: relative;
+	top:203px;
+	background: transparent;
+	padding: 30px;
+	border: none;
+}
+.banner-box-description-2{
+	position: relative;
+	top:203px;
+	background: transparent;
+	padding: 30px;
+	border: none;
+}
+.banner-box-description-2 .card-title{
+	color: #ffffff !important;
+}
+.banner-box-description-2 h5,
+.banner-box-description-2 a{
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 21px;
+
+	color: #000000;
+}
+.banner-box-description-2 a{
+	font-size: 16px;
+	line-height: 19px;
+	text-decoration-line: underline;
+	color: #000000;
+
+}
+.box-under-sentence h5{
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 19px;
+	color: #000000;
 }
