--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -24,16 +24,16 @@ footer {
 
 }
 #home{
-  background-image: url(http://localhost/github/sa-model-new/img/source2.png);
+  background-image: url(../img/source2.png);
 }
 #services{
-  background-image: url(https://app.sourcedagile.com/api/get/zdfiles/traininghub/source_77C7F4E80BD94.png);
+  background-image: url(../img/source.png);
 }
 #Certificatie{
-  background-image: url(https://app.sourcedagile.com/api/get/zdfiles/traininghub/source4_77C7F5130238E.png) ;
+  background-image: url(../img/source4.png) ;
 }
 #our-story{
-  background-image: url(https://app.sourcedagile.com/api/get/zdfiles/traininghub/source3_77C7F52B84A06.png);
+  background-image: url(../img/source3.png);
   background-size: 70% !important;
 }
 .navbar a,
@@ -61,19 +61,19 @@ footer {
 
 @media only screen and (orientation:portrait) {
   #home{
-    background-image: url(http://localhost/github/sa-model-new/img/source2r.png);
+    background-image: url("../img/source2r.png");
     background-size: 58% !important;
   }
   #services{
-    background-image: url(http://localhost/github/sa-model-new/img/sourcer.png);
+    background-image: url(../img/sourcer.png);
     background-size: 50% !important;
   }
   #Certificatie{
-    background-image: url(http://localhost/github/sa-model-new/img/source4r.png) ;
+    background-image: url(../img/source4r.png) ;
     background-size: 50% !important;
   }
   #our-story{
-    background-image: url(http://localhost/github/sa-model-new/img/source3r.png);
+    background-image: url(../img/source3r.png);
     background-size: 54% !important;
   }
 }
