--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -806,8 +806,8 @@ section {
   align-items: center;
   justify-content: center;
   font-weight: 600;
-  font-size: 16px;
-  padding: 8px 20px;
+  font-size: 10px;
+  padding: 8px 10px;
   
 }
 
@@ -1334,10 +1334,49 @@ section {
   flex-direction: column;
   text-align: center;
   transition: 0.3s;
+  position: relative;
+    overflow: hidden;
+}
+.ribbon {
+  width: 110px;
+    height: 30px;
+    display: block;
+    position: unset;
+    overflow: hidden;
+}
+.ribbon span {
+  width: 150px;
+  height: 34px;
+  top: 20px;
+  right: -40px;
+  position: absolute;
+  display: block;
+  background: #FF0000;
+  color: #333;
+  font-family: arial;
+  font-size: 18px;
+  color:white;
+  text-align: center;
+  line-height: 34px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
 }
 
 .testimonial-item .stars {
   margin-bottom: 15px;
+}
+.testimonial-item #new {
+
+ display:inline-block;
+
+}
+.testimonial-item #old {
+  margin-right: 5px;
+  opacity: 0.5;
+  font-size: 0.85em;
+ display:inline-block;
+  text-decoration:line-through;
 }
  .testimonial-item .stars i {
   color: #ffc107;
